--- a/classifier.ipynb
+++ b/classifier.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,25 +110,34 @@
     "        return circles.shape[1]  # Return the number of detected circles\n",
     "    return 0  # No circles detected\n",
     "\n",
+    "def calculate_reflection(image):\n",
+    "    \"\"\"Calculate the amount of bright areas in the image to detect reflections.\"\"\"\n",
+    "    gray_image = cv2.cvtColor(image, cv2.COLOR_BGR2GRAY)\n",
+    "    # Threshold to find bright areas\n",
+    "    _, bright_mask = cv2.threshold(gray_image, 200, 255, cv2.THRESH_BINARY)\n",
+    "    reflection_amount = cv2.countNonZero(bright_mask)\n",
+    "    return reflection_amount\n",
+    "\n",
     "def get_features(image):\n",
-    "    \"\"\"Get a set of features (yellow amount, silver amount, parallel lines, cylindrical shapes) from the image.\"\"\"\n",
+    "    \"\"\"Get a set of features (yellow amount, silver amount, parallel lines, cylindrical shapes, reflections) from the image.\"\"\"\n",
     "    yellow_amount = calculate_yellow_amount(image)\n",
     "    silver_amount = calculate_silver_amount(image)\n",
     "    parallel_lines = calculate_parallel_lines(image)\n",
-    "    cylinder_count = detect_cylinders(image)  # New feature for cylindrical shapes\n",
-    "    return yellow_amount, silver_amount, parallel_lines, cylinder_count"
+    "    cylinder_count = detect_cylinders(image)\n",
+    "    reflection_amount = calculate_reflection(image)\n",
+    "    return yellow_amount, silver_amount, parallel_lines, cylinder_count, reflection_amount"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(15834, 284114, 140, 15)\n"
+      "(15834, 284114, 140, 15, 303454)\n"
      ]
     }
    ],
@@ -147,9 +156,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 0.4361163820366856\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "     battery       0.29      0.36      0.32       145\n",
+      "  biological       0.40      0.50      0.45       138\n",
+      "   cardboard       0.46      0.41      0.44       311\n",
+      "     clothes       0.56      0.76      0.65       886\n",
+      "       glass       0.33      0.35      0.34       455\n",
+      "       metal       0.23      0.14      0.17       163\n",
+      "       paper       0.38      0.24      0.30       263\n",
+      "     plastic       0.32      0.21      0.25       327\n",
+      "       shoes       0.36      0.30      0.33       317\n",
+      "       trash       0.39      0.28      0.33       157\n",
+      "\n",
+      "    accuracy                           0.44      3162\n",
+      "   macro avg       0.37      0.36      0.36      3162\n",
+      "weighted avg       0.41      0.44      0.42      3162\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# Define the path to the dataset\n",
     "base_path = path + \"/garbage-dataset\"\n",
@@ -162,7 +196,7 @@
     "\n",
     "# Loop through each class and extract features from images\n",
     "for class_name in classes:\n",
-    "    class_path = os.path.join(base_path, class_name)\n",
+    "    class_path = os.path.join(path + \"/garbage-dataset/\", class_name)\n",
     "    image_names = os.listdir(class_path)\n",
     "\n",
     "    # Split the images into training and testing sets (80% train, 20% test)\n",
@@ -174,8 +208,8 @@
     "        image = cv2.imread(image_path)\n",
     "\n",
     "        if image is not None:\n",
-    "            yellow_amount, silver_amount, parallel_lines, cylinder_count = get_features(image)\n",
-    "            features.append([yellow_amount, silver_amount, parallel_lines, cylinder_count])\n",
+    "            yellow_amount, silver_amount, parallel_lines, cylinder_count, reflection_amount = get_features(image)\n",
+    "            features.append([yellow_amount, silver_amount, parallel_lines, cylinder_count, reflection_amount])\n",
     "            labels.append(class_name)\n",
     "\n",
     "    # Collect test images for manual testing\n",
@@ -183,11 +217,11 @@
     "        test_images.append(os.path.join(class_path, image_name))\n",
     "\n",
     "# Convert features and labels to a DataFrame\n",
-    "df = pd.DataFrame(features, columns=['yellow_amount', 'silver_amount', 'parallel_lines', 'cylinder_count'])\n",
+    "df = pd.DataFrame(features, columns=['yellow_amount', 'silver_amount', 'parallel_lines', 'cylinder_count', 'reflection_amount'])\n",
     "df['label'] = labels\n",
     "\n",
     "# Split the dataset into training and testing sets\n",
-    "X = df[['yellow_amount', 'silver_amount', 'parallel_lines', 'cylinder_count']]\n",
+    "X = df[['yellow_amount', 'silver_amount', 'parallel_lines', 'cylinder_count', 'reflection_amount']]\n",
     "y = df['label']\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
     "\n",
@@ -206,8 +240,8 @@
     "def classify_image(image_path):\n",
     "    image = cv2.imread(image_path)\n",
     "    if image is not None:\n",
-    "        yellow_amount, silver_amount, parallel_lines, cylinder_count = get_features(image)\n",
-    "        feature = np.array([[yellow_amount, silver_amount, parallel_lines, cylinder_count]])\n",
+    "        yellow_amount, silver_amount, parallel_lines, cylinder_count, reflection_amount = get_features(image)\n",
+    "        feature = np.array([[yellow_amount, silver_amount, parallel_lines, cylinder_count, reflection_amount]])\n",
     "        prediction = classifier.predict(feature)\n",
     "        return prediction[0]\n",
     "    else:\n",
@@ -216,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -229,14 +263,13 @@
    ],
    "source": [
     "# Classifier testing (runs classifier for a specific image)\n",
-    "\n",
     "result = classify_image(path + '/garbage-dataset/metal/metal_2370.jpg') \n",
     "print(\"Predicted class:\", result)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -244,121 +277,119 @@
      "output_type": "stream",
      "text": [
       "Predicted class counts for test images containing trash:\n",
-      "Class: biological, Count: 6\n",
-      "Class: glass, Count: 36\n",
-      "Class: trash, Count: 51\n",
       "Class: metal, Count: 4\n",
-      "Class: plastic, Count: 22\n",
-      "Class: battery, Count: 13\n",
-      "Class: shoes, Count: 23\n",
-      "Class: cardboard, Count: 9\n",
-      "Class: clothes, Count: 21\n",
-      "Class: paper, Count: 5\n",
-      "Predicted class counts for test images containing glass:\n",
-      "Class: trash, Count: 37\n",
-      "Class: shoes, Count: 84\n",
-      "Class: glass, Count: 166\n",
-      "Class: clothes, Count: 131\n",
-      "Class: plastic, Count: 49\n",
-      "Class: battery, Count: 25\n",
-      "Class: paper, Count: 24\n",
-      "Class: biological, Count: 35\n",
-      "Class: cardboard, Count: 46\n",
-      "Class: metal, Count: 16\n",
-      "Predicted class counts for test images containing battery:\n",
-      "Class: glass, Count: 31\n",
-      "Class: paper, Count: 13\n",
-      "Class: biological, Count: 5\n",
-      "Class: clothes, Count: 40\n",
-      "Class: battery, Count: 48\n",
-      "Class: plastic, Count: 7\n",
-      "Class: shoes, Count: 23\n",
-      "Class: trash, Count: 5\n",
-      "Class: metal, Count: 6\n",
-      "Class: cardboard, Count: 11\n",
-      "Predicted class counts for test images containing clothes:\n",
-      "Class: clothes, Count: 708\n",
-      "Class: plastic, Count: 53\n",
-      "Class: glass, Count: 77\n",
-      "Class: shoes, Count: 41\n",
-      "Class: cardboard, Count: 36\n",
-      "Class: paper, Count: 69\n",
-      "Class: metal, Count: 19\n",
-      "Class: battery, Count: 27\n",
-      "Class: biological, Count: 28\n",
-      "Class: trash, Count: 8\n",
-      "Predicted class counts for test images containing metal:\n",
-      "Class: paper, Count: 13\n",
-      "Class: glass, Count: 25\n",
-      "Class: battery, Count: 8\n",
-      "Class: clothes, Count: 47\n",
-      "Class: shoes, Count: 24\n",
-      "Class: metal, Count: 23\n",
-      "Class: biological, Count: 19\n",
-      "Class: cardboard, Count: 12\n",
-      "Class: plastic, Count: 24\n",
-      "Class: trash, Count: 9\n",
-      "Predicted class counts for test images containing plastic:\n",
-      "Class: clothes, Count: 124\n",
-      "Class: battery, Count: 16\n",
-      "Class: trash, Count: 21\n",
-      "Class: plastic, Count: 73\n",
-      "Class: paper, Count: 25\n",
-      "Class: shoes, Count: 22\n",
-      "Class: biological, Count: 15\n",
-      "Class: cardboard, Count: 32\n",
-      "Class: metal, Count: 13\n",
-      "Class: glass, Count: 56\n",
-      "Predicted class counts for test images containing cardboard:\n",
-      "Class: cardboard, Count: 152\n",
-      "Class: glass, Count: 54\n",
-      "Class: clothes, Count: 69\n",
-      "Class: trash, Count: 8\n",
-      "Class: metal, Count: 8\n",
-      "Class: plastic, Count: 19\n",
-      "Class: battery, Count: 10\n",
+      "Class: glass, Count: 43\n",
+      "Class: trash, Count: 60\n",
+      "Class: plastic, Count: 14\n",
+      "Class: battery, Count: 15\n",
       "Class: shoes, Count: 18\n",
-      "Class: biological, Count: 10\n",
-      "Class: paper, Count: 17\n",
-      "Predicted class counts for test images containing paper:\n",
-      "Class: biological, Count: 6\n",
-      "Class: clothes, Count: 113\n",
-      "Class: plastic, Count: 21\n",
-      "Class: shoes, Count: 15\n",
-      "Class: cardboard, Count: 22\n",
-      "Class: glass, Count: 40\n",
-      "Class: battery, Count: 9\n",
-      "Class: metal, Count: 16\n",
-      "Class: paper, Count: 90\n",
-      "Class: trash, Count: 4\n",
-      "Predicted class counts for test images containing biological:\n",
-      "Class: cardboard, Count: 14\n",
-      "Class: battery, Count: 3\n",
-      "Class: biological, Count: 91\n",
-      "Class: glass, Count: 22\n",
-      "Class: shoes, Count: 22\n",
-      "Class: clothes, Count: 33\n",
-      "Class: plastic, Count: 7\n",
-      "Class: metal, Count: 4\n",
-      "Class: paper, Count: 1\n",
-      "Class: trash, Count: 3\n",
-      "Predicted class counts for test images containing shoes:\n",
-      "Class: shoes, Count: 98\n",
-      "Class: paper, Count: 14\n",
-      "Class: metal, Count: 23\n",
-      "Class: clothes, Count: 81\n",
-      "Class: plastic, Count: 25\n",
-      "Class: glass, Count: 61\n",
-      "Class: biological, Count: 28\n",
+      "Class: cardboard, Count: 8\n",
+      "Class: clothes, Count: 20\n",
+      "Class: biological, Count: 4\n",
+      "Class: paper, Count: 4\n",
+      "Predicted class counts for test images containing glass:\n",
+      "Class: trash, Count: 25\n",
+      "Class: shoes, Count: 86\n",
+      "Class: metal, Count: 18\n",
+      "Class: glass, Count: 210\n",
+      "Class: clothes, Count: 129\n",
+      "Class: plastic, Count: 35\n",
       "Class: battery, Count: 23\n",
-      "Class: trash, Count: 20\n",
-      "Class: cardboard, Count: 23\n"
+      "Class: paper, Count: 18\n",
+      "Class: biological, Count: 26\n",
+      "Class: cardboard, Count: 43\n",
+      "Predicted class counts for test images containing battery:\n",
+      "Class: glass, Count: 30\n",
+      "Class: paper, Count: 3\n",
+      "Class: biological, Count: 5\n",
+      "Class: clothes, Count: 26\n",
+      "Class: battery, Count: 77\n",
+      "Class: plastic, Count: 4\n",
+      "Class: shoes, Count: 25\n",
+      "Class: metal, Count: 5\n",
+      "Class: cardboard, Count: 11\n",
+      "Class: trash, Count: 3\n",
+      "Predicted class counts for test images containing clothes:\n",
+      "Class: clothes, Count: 804\n",
+      "Class: shoes, Count: 32\n",
+      "Class: paper, Count: 50\n",
+      "Class: cardboard, Count: 30\n",
+      "Class: glass, Count: 58\n",
+      "Class: metal, Count: 10\n",
+      "Class: battery, Count: 18\n",
+      "Class: biological, Count: 27\n",
+      "Class: plastic, Count: 36\n",
+      "Class: trash, Count: 1\n",
+      "Predicted class counts for test images containing metal:\n",
+      "Class: paper, Count: 11\n",
+      "Class: metal, Count: 37\n",
+      "Class: battery, Count: 9\n",
+      "Class: clothes, Count: 50\n",
+      "Class: trash, Count: 5\n",
+      "Class: glass, Count: 33\n",
+      "Class: biological, Count: 13\n",
+      "Class: shoes, Count: 22\n",
+      "Class: cardboard, Count: 9\n",
+      "Class: plastic, Count: 15\n",
+      "Predicted class counts for test images containing plastic:\n",
+      "Class: clothes, Count: 125\n",
+      "Class: cardboard, Count: 33\n",
+      "Class: battery, Count: 8\n",
+      "Class: plastic, Count: 89\n",
+      "Class: glass, Count: 57\n",
+      "Class: trash, Count: 16\n",
+      "Class: paper, Count: 20\n",
+      "Class: shoes, Count: 26\n",
+      "Class: biological, Count: 13\n",
+      "Class: metal, Count: 10\n",
+      "Predicted class counts for test images containing cardboard:\n",
+      "Class: cardboard, Count: 166\n",
+      "Class: battery, Count: 10\n",
+      "Class: trash, Count: 5\n",
+      "Class: glass, Count: 42\n",
+      "Class: metal, Count: 10\n",
+      "Class: clothes, Count: 71\n",
+      "Class: shoes, Count: 19\n",
+      "Class: biological, Count: 11\n",
+      "Class: plastic, Count: 15\n",
+      "Class: paper, Count: 16\n",
+      "Predicted class counts for test images containing paper:\n",
+      "Class: paper, Count: 92\n",
+      "Class: clothes, Count: 130\n",
+      "Class: glass, Count: 43\n",
+      "Class: plastic, Count: 12\n",
+      "Class: cardboard, Count: 21\n",
+      "Class: trash, Count: 7\n",
+      "Class: metal, Count: 10\n",
+      "Class: battery, Count: 9\n",
+      "Class: shoes, Count: 9\n",
+      "Class: biological, Count: 3\n",
+      "Predicted class counts for test images containing biological:\n",
+      "Class: cardboard, Count: 11\n",
+      "Class: clothes, Count: 33\n",
+      "Class: biological, Count: 104\n",
+      "Class: glass, Count: 22\n",
+      "Class: shoes, Count: 16\n",
+      "Class: plastic, Count: 6\n",
+      "Class: trash, Count: 3\n",
+      "Class: battery, Count: 4\n",
+      "Class: paper, Count: 1\n",
+      "Predicted class counts for test images containing shoes:\n",
+      "Class: glass, Count: 59\n",
+      "Class: paper, Count: 8\n",
+      "Class: metal, Count: 13\n",
+      "Class: clothes, Count: 75\n",
+      "Class: cardboard, Count: 21\n",
+      "Class: plastic, Count: 15\n",
+      "Class: biological, Count: 32\n",
+      "Class: shoes, Count: 137\n",
+      "Class: battery, Count: 22\n",
+      "Class: trash, Count: 14\n"
      ]
     }
    ],
    "source": [
     "# Classifier testing (runs classifier for the remaining images)\n",
-    "\n",
     "def test_classify(test_images, target_class_name):\n",
     "    predictions = defaultdict(int)\n",
     "    for test_image in test_images:\n",
