--- a/classifier.ipynb
+++ b/classifier.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,26 +118,40 @@
     "    reflection_amount = cv2.countNonZero(bright_mask)\n",
     "    return reflection_amount\n",
     "\n",
+    "def calculate_transparency(image):\n",
+    "    \"\"\"\n",
+    "    Calculate the amount of transparent areas in the image.\n",
+    "    Transparent areas are identified as regions with low saturation and brightness in the HSV color space.\n",
+    "    \"\"\"\n",
+    "    hsv_image = cv2.cvtColor(image, cv2.COLOR_BGR2HSV)\n",
+    "    # Define thresholds for low saturation and brightness (transparent regions)\n",
+    "    lower_transparent = np.array([0, 0, 0])\n",
+    "    upper_transparent = np.array([180, 50, 50])  # Adjust upper threshold as needed\n",
+    "    transparent_mask = cv2.inRange(hsv_image, lower_transparent, upper_transparent)\n",
+    "    transparency_amount = cv2.countNonZero(transparent_mask)\n",
+    "    return transparency_amount\n",
+    "\n",
     "def get_features(image):\n",
-    "    \"\"\"Get a set of features (yellow amount, silver amount, parallel lines, cylindrical shapes, reflections) from the image.\"\"\"\n",
+    "    \"\"\"Get a set of features (yellow amount, silver amount, parallel lines, cylindrical shapes, reflections, transparency) from the image.\"\"\"\n",
     "    yellow_amount = calculate_yellow_amount(image)\n",
     "    silver_amount = calculate_silver_amount(image)\n",
     "    parallel_lines = calculate_parallel_lines(image)\n",
     "    cylinder_count = detect_cylinders(image)\n",
     "    reflection_amount = calculate_reflection(image)\n",
-    "    return yellow_amount, silver_amount, parallel_lines, cylinder_count, reflection_amount"
+    "    transparency_amount = calculate_transparency(image)  # Новый признак\n",
+    "    return yellow_amount, silver_amount, parallel_lines, cylinder_count, reflection_amount, transparency_amount"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(15834, 284114, 140, 15, 303454)\n"
+      "(15834, 284114, 140, 15, 303454, 0)\n"
      ]
     }
    ],
@@ -156,30 +170,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 0.4361163820366856\n",
+      "Accuracy: 0.4898798228969007\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "     battery       0.29      0.36      0.32       145\n",
-      "  biological       0.40      0.50      0.45       138\n",
-      "   cardboard       0.46      0.41      0.44       311\n",
-      "     clothes       0.56      0.76      0.65       886\n",
-      "       glass       0.33      0.35      0.34       455\n",
-      "       metal       0.23      0.14      0.17       163\n",
-      "       paper       0.38      0.24      0.30       263\n",
-      "     plastic       0.32      0.21      0.25       327\n",
-      "       shoes       0.36      0.30      0.33       317\n",
-      "       trash       0.39      0.28      0.33       157\n",
+      "     battery       0.52      0.51      0.52       145\n",
+      "  biological       0.47      0.55      0.50       138\n",
+      "   cardboard       0.51      0.48      0.49       311\n",
+      "     clothes       0.58      0.80      0.67       886\n",
+      "       glass       0.39      0.44      0.41       455\n",
+      "       metal       0.32      0.14      0.20       163\n",
+      "       paper       0.51      0.28      0.36       263\n",
+      "     plastic       0.36      0.25      0.29       327\n",
+      "       shoes       0.41      0.36      0.38       317\n",
+      "       trash       0.46      0.33      0.39       157\n",
       "\n",
-      "    accuracy                           0.44      3162\n",
-      "   macro avg       0.37      0.36      0.36      3162\n",
-      "weighted avg       0.41      0.44      0.42      3162\n",
+      "    accuracy                           0.49      3162\n",
+      "   macro avg       0.45      0.41      0.42      3162\n",
+      "weighted avg       0.47      0.49      0.47      3162\n",
       "\n"
      ]
     }
@@ -208,8 +222,8 @@
     "        image = cv2.imread(image_path)\n",
     "\n",
     "        if image is not None:\n",
-    "            yellow_amount, silver_amount, parallel_lines, cylinder_count, reflection_amount = get_features(image)\n",
-    "            features.append([yellow_amount, silver_amount, parallel_lines, cylinder_count, reflection_amount])\n",
+    "            yellow_amount, silver_amount, parallel_lines, cylinder_count, reflection_amount, transparency_amount = get_features(image)\n",
+    "            features.append([yellow_amount, silver_amount, parallel_lines, cylinder_count, reflection_amount, transparency_amount])\n",
     "            labels.append(class_name)\n",
     "\n",
     "    # Collect test images for manual testing\n",
@@ -217,11 +231,11 @@
     "        test_images.append(os.path.join(class_path, image_name))\n",
     "\n",
     "# Convert features and labels to a DataFrame\n",
-    "df = pd.DataFrame(features, columns=['yellow_amount', 'silver_amount', 'parallel_lines', 'cylinder_count', 'reflection_amount'])\n",
+    "df = pd.DataFrame(features, columns=['yellow_amount', 'silver_amount', 'parallel_lines', 'cylinder_count', 'reflection_amount', 'transparency_amount'])\n",
     "df['label'] = labels\n",
     "\n",
     "# Split the dataset into training and testing sets\n",
-    "X = df[['yellow_amount', 'silver_amount', 'parallel_lines', 'cylinder_count', 'reflection_amount']]\n",
+    "X = df[['yellow_amount', 'silver_amount', 'parallel_lines', 'cylinder_count', 'reflection_amount', 'transparency_amount']]\n",
     "y = df['label']\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
     "\n",
@@ -240,8 +254,8 @@
     "def classify_image(image_path):\n",
     "    image = cv2.imread(image_path)\n",
     "    if image is not None:\n",
-    "        yellow_amount, silver_amount, parallel_lines, cylinder_count, reflection_amount = get_features(image)\n",
-    "        feature = np.array([[yellow_amount, silver_amount, parallel_lines, cylinder_count, reflection_amount]])\n",
+    "        yellow_amount, silver_amount, parallel_lines, cylinder_count, reflection_amount, transparency_amount = get_features(image)\n",
+    "        feature = np.array([[yellow_amount, silver_amount, parallel_lines, cylinder_count, reflection_amount, transparency_amount]])\n",
     "        prediction = classifier.predict(feature)\n",
     "        return prediction[0]\n",
     "    else:\n",
@@ -250,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -269,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -277,114 +291,115 @@
      "output_type": "stream",
      "text": [
       "Predicted class counts for test images containing trash:\n",
-      "Class: metal, Count: 4\n",
-      "Class: glass, Count: 43\n",
-      "Class: trash, Count: 60\n",
-      "Class: plastic, Count: 14\n",
-      "Class: battery, Count: 15\n",
-      "Class: shoes, Count: 18\n",
-      "Class: cardboard, Count: 8\n",
-      "Class: clothes, Count: 20\n",
-      "Class: biological, Count: 4\n",
-      "Class: paper, Count: 4\n",
-      "Predicted class counts for test images containing glass:\n",
-      "Class: trash, Count: 25\n",
-      "Class: shoes, Count: 86\n",
-      "Class: metal, Count: 18\n",
-      "Class: glass, Count: 210\n",
-      "Class: clothes, Count: 129\n",
-      "Class: plastic, Count: 35\n",
-      "Class: battery, Count: 23\n",
-      "Class: paper, Count: 18\n",
-      "Class: biological, Count: 26\n",
-      "Class: cardboard, Count: 43\n",
-      "Predicted class counts for test images containing battery:\n",
-      "Class: glass, Count: 30\n",
+      "Class: metal, Count: 7\n",
+      "Class: trash, Count: 73\n",
+      "Class: battery, Count: 5\n",
+      "Class: plastic, Count: 16\n",
+      "Class: shoes, Count: 11\n",
+      "Class: glass, Count: 44\n",
+      "Class: cardboard, Count: 13\n",
+      "Class: clothes, Count: 15\n",
       "Class: paper, Count: 3\n",
-      "Class: biological, Count: 5\n",
-      "Class: clothes, Count: 26\n",
-      "Class: battery, Count: 77\n",
-      "Class: plastic, Count: 4\n",
-      "Class: shoes, Count: 25\n",
-      "Class: metal, Count: 5\n",
-      "Class: cardboard, Count: 11\n",
-      "Class: trash, Count: 3\n",
-      "Predicted class counts for test images containing clothes:\n",
-      "Class: clothes, Count: 804\n",
-      "Class: shoes, Count: 32\n",
-      "Class: paper, Count: 50\n",
-      "Class: cardboard, Count: 30\n",
-      "Class: glass, Count: 58\n",
-      "Class: metal, Count: 10\n",
-      "Class: battery, Count: 18\n",
-      "Class: biological, Count: 27\n",
-      "Class: plastic, Count: 36\n",
-      "Class: trash, Count: 1\n",
-      "Predicted class counts for test images containing metal:\n",
-      "Class: paper, Count: 11\n",
-      "Class: metal, Count: 37\n",
-      "Class: battery, Count: 9\n",
-      "Class: clothes, Count: 50\n",
-      "Class: trash, Count: 5\n",
-      "Class: glass, Count: 33\n",
-      "Class: biological, Count: 13\n",
-      "Class: shoes, Count: 22\n",
-      "Class: cardboard, Count: 9\n",
-      "Class: plastic, Count: 15\n",
-      "Predicted class counts for test images containing plastic:\n",
-      "Class: clothes, Count: 125\n",
-      "Class: cardboard, Count: 33\n",
-      "Class: battery, Count: 8\n",
-      "Class: plastic, Count: 89\n",
-      "Class: glass, Count: 57\n",
-      "Class: trash, Count: 16\n",
-      "Class: paper, Count: 20\n",
-      "Class: shoes, Count: 26\n",
-      "Class: biological, Count: 13\n",
-      "Class: metal, Count: 10\n",
-      "Predicted class counts for test images containing cardboard:\n",
-      "Class: cardboard, Count: 166\n",
-      "Class: battery, Count: 10\n",
-      "Class: trash, Count: 5\n",
-      "Class: glass, Count: 42\n",
-      "Class: metal, Count: 10\n",
-      "Class: clothes, Count: 71\n",
-      "Class: shoes, Count: 19\n",
-      "Class: biological, Count: 11\n",
-      "Class: plastic, Count: 15\n",
-      "Class: paper, Count: 16\n",
-      "Predicted class counts for test images containing paper:\n",
-      "Class: paper, Count: 92\n",
-      "Class: clothes, Count: 130\n",
-      "Class: glass, Count: 43\n",
-      "Class: plastic, Count: 12\n",
-      "Class: cardboard, Count: 21\n",
-      "Class: trash, Count: 7\n",
-      "Class: metal, Count: 10\n",
-      "Class: battery, Count: 9\n",
-      "Class: shoes, Count: 9\n",
       "Class: biological, Count: 3\n",
-      "Predicted class counts for test images containing biological:\n",
-      "Class: cardboard, Count: 11\n",
-      "Class: clothes, Count: 33\n",
-      "Class: biological, Count: 104\n",
-      "Class: glass, Count: 22\n",
-      "Class: shoes, Count: 16\n",
-      "Class: plastic, Count: 6\n",
+      "Predicted class counts for test images containing glass:\n",
+      "Class: glass, Count: 261\n",
+      "Class: trash, Count: 31\n",
+      "Class: metal, Count: 14\n",
+      "Class: biological, Count: 22\n",
+      "Class: cardboard, Count: 27\n",
+      "Class: plastic, Count: 39\n",
+      "Class: shoes, Count: 63\n",
+      "Class: clothes, Count: 112\n",
+      "Class: paper, Count: 19\n",
+      "Class: battery, Count: 25\n",
+      "Predicted class counts for test images containing battery:\n",
+      "Class: shoes, Count: 26\n",
+      "Class: paper, Count: 3\n",
+      "Class: biological, Count: 8\n",
+      "Class: clothes, Count: 22\n",
+      "Class: glass, Count: 28\n",
+      "Class: battery, Count: 94\n",
+      "Class: plastic, Count: 2\n",
+      "Class: metal, Count: 1\n",
+      "Class: cardboard, Count: 4\n",
+      "Class: trash, Count: 1\n",
+      "Predicted class counts for test images containing clothes:\n",
+      "Class: clothes, Count: 841\n",
+      "Class: glass, Count: 54\n",
+      "Class: paper, Count: 39\n",
+      "Class: battery, Count: 14\n",
+      "Class: shoes, Count: 21\n",
+      "Class: biological, Count: 33\n",
       "Class: trash, Count: 3\n",
+      "Class: metal, Count: 12\n",
+      "Class: plastic, Count: 23\n",
+      "Class: cardboard, Count: 26\n",
+      "Predicted class counts for test images containing metal:\n",
+      "Class: paper, Count: 10\n",
+      "Class: shoes, Count: 20\n",
+      "Class: clothes, Count: 48\n",
+      "Class: glass, Count: 46\n",
+      "Class: metal, Count: 37\n",
+      "Class: biological, Count: 14\n",
+      "Class: cardboard, Count: 9\n",
+      "Class: plastic, Count: 13\n",
+      "Class: trash, Count: 5\n",
+      "Class: battery, Count: 2\n",
+      "Predicted class counts for test images containing plastic:\n",
+      "Class: clothes, Count: 121\n",
+      "Class: paper, Count: 19\n",
+      "Class: plastic, Count: 106\n",
+      "Class: glass, Count: 61\n",
+      "Class: trash, Count: 17\n",
+      "Class: cardboard, Count: 35\n",
+      "Class: biological, Count: 17\n",
+      "Class: shoes, Count: 15\n",
+      "Class: metal, Count: 4\n",
+      "Class: battery, Count: 2\n",
+      "Predicted class counts for test images containing cardboard:\n",
+      "Class: cardboard, Count: 193\n",
+      "Class: glass, Count: 32\n",
+      "Class: trash, Count: 9\n",
+      "Class: metal, Count: 6\n",
+      "Class: clothes, Count: 63\n",
+      "Class: biological, Count: 13\n",
+      "Class: shoes, Count: 15\n",
       "Class: battery, Count: 4\n",
-      "Class: paper, Count: 1\n",
-      "Predicted class counts for test images containing shoes:\n",
-      "Class: glass, Count: 59\n",
-      "Class: paper, Count: 8\n",
-      "Class: metal, Count: 13\n",
-      "Class: clothes, Count: 75\n",
-      "Class: cardboard, Count: 21\n",
       "Class: plastic, Count: 15\n",
-      "Class: biological, Count: 32\n",
-      "Class: shoes, Count: 137\n",
-      "Class: battery, Count: 22\n",
-      "Class: trash, Count: 14\n"
+      "Class: paper, Count: 15\n",
+      "Predicted class counts for test images containing paper:\n",
+      "Class: paper, Count: 113\n",
+      "Class: clothes, Count: 108\n",
+      "Class: glass, Count: 30\n",
+      "Class: metal, Count: 10\n",
+      "Class: cardboard, Count: 23\n",
+      "Class: plastic, Count: 21\n",
+      "Class: battery, Count: 7\n",
+      "Class: trash, Count: 13\n",
+      "Class: shoes, Count: 6\n",
+      "Class: biological, Count: 5\n",
+      "Predicted class counts for test images containing biological:\n",
+      "Class: plastic, Count: 4\n",
+      "Class: cardboard, Count: 5\n",
+      "Class: clothes, Count: 30\n",
+      "Class: biological, Count: 114\n",
+      "Class: glass, Count: 17\n",
+      "Class: shoes, Count: 23\n",
+      "Class: trash, Count: 3\n",
+      "Class: battery, Count: 1\n",
+      "Class: paper, Count: 2\n",
+      "Class: metal, Count: 1\n",
+      "Predicted class counts for test images containing shoes:\n",
+      "Class: glass, Count: 57\n",
+      "Class: shoes, Count: 151\n",
+      "Class: metal, Count: 15\n",
+      "Class: clothes, Count: 94\n",
+      "Class: plastic, Count: 8\n",
+      "Class: biological, Count: 28\n",
+      "Class: trash, Count: 8\n",
+      "Class: cardboard, Count: 14\n",
+      "Class: battery, Count: 18\n",
+      "Class: paper, Count: 3\n"
      ]
     }
    ],
